rnsc/tests/snapshots/error-parser-inner_name_sub_directive-trailing_tokens.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that trailing tokens after .inner_name are detected and reported.
; Expected error: E-040 (inner_name trailing tokens)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .inner_name MyInner trailing
.inner_classes_attr_end

.class_end
----- STDERR -----
[E-040] Error: unexpected trailing tokens after .inner_name directive
   ╭─[ test_data/rns_integration/error/parser/inner_name_sub_directive/trailing_tokens.rns:8:25 ]
   │
 8 │     .inner_name MyInner trailing
   │                        │────┬───  
   │                        ╰────────── expected end of .inner_name directive here
   │                             │     
   │                             ╰───── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-040
───╯
----- JAVAP -----
not generated
